--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <a class="nav-list__link" href="#">Home</a>
             </li>
             <li class="nav-list__item">
-              <a class="nav-list__link" href="#">About us</a>
+              <a class="nav-list__link" href="./about.html">About us</a>
             </li>
             <li class="nav-list__item" data-dropdown>
               <a class="nav-list__link" data-dropdown-menu href="#">Services</a>
