Family Page Complete

--- a/about.html
+++ b/about.html
@@ -80,9 +80,9 @@
     </header>
 
     <main class="main about-main">
-      <section class="about-header">
-        <div class="overlay about-overlay">
-          <h1 class="about-header__title">Who we are</h1>
+      <section class="about-header sub-header">
+        <div class="overlay about-overlay sub-overlay">
+          <h1 class="about-header__title sub-header__title">Who we are</h1>
         </div>
       </section>
 
