--- a/business.html
+++ b/business.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Family Relocation|PAM Consulting</title>
+    <title>Business Relocation|PAM Consulting</title>
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/fonts.css" />
     <link
@@ -79,11 +79,11 @@
       </div>
     </header>
 
-    <main class="main family-main">
-      <section class="family-header sub-header">
-        <div class="overlay family-overlay sub-overlay">
-          <h1 class="family-header__title sub-header__title">
-            Family Relocation to Cyprus
+    <main class="main business-main">
+      <section class="business-header sub-header">
+        <div class="overlay business-overlay sub-overlay">
+          <h1 class="business-header__title sub-header__title">
+            Business Relocation
           </h1>
         </div>
       </section>
