Business Page Complete

--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us|PAM Consulting</title>
+    <link rel="icon" href="./images/logo-min.png">
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/fonts.css" />
     <link
@@ -311,9 +312,9 @@
           <p class="footer__text">
             © 2022 PAM Consulting. All rights reserved
             <span class="footer__line">|</span>
-            Disclaimer
+            <a href="#" class="footer__link">Disclaimer</a>
             <span class="footer__line">|</span>
-            Privacy poilcy
+            <a href="#" class="footer__link">Privacy poilcy</a>
           </p>
         </div>
       </div>
