--- a/business.html
+++ b/business.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Business Relocation|PAM Consulting</title>
+    <link rel="icon" href="./images/logo-min.png">
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/fonts.css" />
     <link
@@ -90,60 +91,64 @@
 
       <section class="first-row-content-wrapper row-content-wrapper">
         <div class="container">
-          <div class="first-content-row content-row">
-            <div class="first-content content">
+          <div class="first-content-row content-row first-business-content-row">
+            <div class="first-content content first-business-content">
               <h2 class="first-content__title content__title">
-                Living the Island Life
+                Business-Friendly Environment
               </h2>
               <p class="first-content__description content__description">
-                When you make the decision to move to a different country with
-                your family, you’re looking for the perfect place to call home.
-                Every person and every family has their own perception of what
-                an ideal place to live looks like. While some people prefer to
-                live by the beach, others prefer the mountains. You may long to
-                live in a quiet little village, while others enjoy the bustling
-                life of the city. So, why do thousands of families choose Cyprus
-                as their ultimate destination? Because this island has it all!
-                Everything is in close proximity, enabling you to discover every
-                hidden aspect of the island.
-              </p>
-              <p class="first-content__list-title content__list-title">
-                The Cypriot lifestyle embraces people of all ages and
-                backgrounds.
+                Apart from being one of the most attractive holiday destinations
+                globally, Cyprus is also recognized as an ever-growing hub for
+                business in the EU. Every year, entrepreneurs from all around
+                the world are moving to Cyprus with the aim to maximize their
+                business efforts and opportunities. Every big city on the island
+                – Nicosia, Limassol, Paphos, and Larnaca – has something to
+                offer to every ambition-driven individual. This
+                business-friendly environment is the result of effective
+                business initiatives taken by the government which focus on
+                providing a variety of benefits to people moving from abroad.
+                <span class="first-content__list-title content__list-title first-content__list-span">
+                  Among the multitude of reasons why Cyprus is the ideal place
+                  to relocate your business are the following:
+                </span>
               </p>
               <ul class="first-list sub-page-list">
                 <li class="first-list__item sub-page-list__item">
-                  Laid-back lifestyle: The Mediterranean way of life comes to
-                  contradict the tiresome and stressful life in larger cities
-                  and countries.
+                  Great Market access: The Geostrategic position of the island
+                  enables businesses to access major markets of the EU
                 </li>
                 <li class="first-list__item sub-page-list__item">
-                  Low pollution levels: Striving to become even more
-                  environmentally-friendly, Cyprus’s air quality is high.
+                  12.5% corporate tax rate: One of the lowest Corporate tax
+                  rates in the EU
                 </li>
                 <li class="first-list__item sub-page-list__item">
-                  Stunning beaches: One of the most obvious reasons people move
-                  to Cyprus is the ability to live by some of the most magical
-                  and turquoise beaches of the world.
+                  Simple Immigration & Employment process
                 </li>
                 <li class="first-list__item sub-page-list__item">
-                  The fantastic Cypriot weather: Cyprus's climate is considered
-                  one of the healthiest in the world, with over 300 days of
-                  sunshine annually. Average winter temperatures are 13-15°C,
-                  and summer temperatures are 30-33°C.
+                  Investment Opportunities: some of the most powerful businesses
+                  include real estate, shipping companies, financial, and
+                  insurance industries
+                </li>
+                <li class="first-list__item sub-page-list__item">
+                  Cypriot Citizenship on naturalization grounds can be applied
+                  for following 7 years of employment and residence
+                </li>
+                <li class="first-list__item sub-page-list__item">
+                  Straightforward Corporate Structures: simple compliance and
+                  legal processes
                 </li>
               </ul>
               <p class="first-content__text content__text">
-                It doesn’t take long to be captivated by the mesmerizing Cypriot
-                lifestyle. All of these advantages makes the decision to
-                relocate much easier.
+                These benefits create an attractive and inviting business
+                environment for those seeking to expand their businesses in one
+                of the most dominant corporate locations of the world.
               </p>
             </div>
             <div class="first-content__image content__image">
               <img
-                src="./images/sub-offer/family-1-min.jpg"
-                alt="family"
-                class="first-content__img content__img"
+                src="./images/sub-offer/business-1-min.jpg"
+                alt="business"
+                class="first-content__img content__img business-content__img"
               />
             </div>
           </div>
@@ -152,56 +157,67 @@
 
       <section class="second-row-content-wrapper row-content-wrapper">
         <div class="container">
-          <div class="second-content-row content-row">
+          <div class="second-content-row content-row second-business-content-row">
             <div class="second-content__image content__image">
               <img
-                src="./images/sub-offer/family-2-min.jpg"
+                src="./images/sub-offer/business-2-min.jpg"
                 alt="family"
-                class="second-content__img content__img"
+                class="second-content__img content__img business-content__img"
               />
             </div>
-            <div class="second-content content">
+            <div class="second-content content second-business-content">
               <h2 class="second-content__title content__title">
-                Child-Friendly Community
+                Quality of Life in Cyprus
               </h2>
               <p class="second-content__description content__description">
-                Your most prominent priority when relocating your family is that
-                your children’s quality of life will only get better once you
-                move and settle down. The process of moving is challenging for
-                anyone, and this is especially true when it comes to children
-                who need to adapt to a new way of life. The family-oriented
-                environment of Cyprus makes this process much more enjoyable.
-                With a huge variety of activities and experiences, children of
-                all ages can discover new hobbies and skills. The diverse
-                cultural community is also a chance for children to understand
-                the world and cultivate their minds to become accepting towards
-                people from all around the world.
+                A minimum of around 4 million tourists choose Cyprus as their
+                holiday destination per year. This makes the island one of the
+                most popular destinations in the world. In fact, many people who
+                experience life in Cyprus tend to return either for another
+                holiday or decide to move permanently. As a business
+                entrepreneur looking to relocate, the most essential point to
+                carefully consider is the new location of your business
+                activities. This is why apart from the outstanding business
+                advantages of Cyprus, you can also find the ideal location for
+                you and your employees to work and live. The cost of living is
+                lower than in most other EU countries High quality of living for
+                expatriates: there are thousands of expat communities around the
+                island Low crime rate: one of the safest countries to live
+                globally Exceptional healthcare facilities Among the world's top
+                retirement destinations One of the best state pension systems
+                worldwide A strong education sector with a wide range of public
+                and private higher education institutions. Choosing Cyprus is
+                more than just relocating your business – it’s about starting a
+                new life built on quality and security.
               </p>
               <ul class="second-list sub-page-list">
                 <li class="second-list__item sub-page-list__item">
-                  Extremely low crime rates: Safety and security are among the
-                  most important reasons why Cyprus is great for families.
+                  The cost of living is lower than in most other EU countries
                 </li>
                 <li class="second-list__item sub-page-list__item">
-                  Education system: Your children have the opportunity to
-                  experience one of Europe’s highest education standards in
-                  every level of education.
+                  High quality of living for expatriates: there are thousands of
+                  expat communities around the island
                 </li>
                 <li class="second-list__item sub-page-list__item">
-                  Quality public and private healthcare: with an excellent
-                  multi-layered healthcare system, you can have easy access to
-                  hospitals and clinics of the country.
+                  Low crime rate: one of the safest countries to live globally
                 </li>
                 <li class="second-list__item sub-page-list__item">
-                  Abundance of entertainment activities: From watersports to
-                  playgrounds, farms, and historical attractions, your children
-                  will never get bored of the island life.
+                  Exceptional healthcare facilities
+                </li>
+                <li class="second-list__item sub-page-list__item">
+                  Among the world's top retirement destinations
+                </li>
+                <li class="second-list__item sub-page-list__item">
+                  One of the best state pension systems worldwide
+                </li>
+                <li class="second-list__item sub-page-list__item">
+                  A strong education sector with a wide range of public and
+                  private higher education institutions.
                 </li>
               </ul>
               <p class="second-content__text content__text">
-                The friendly and welcoming manner of the locals also adds to the
-                peaceful atmosphere of the island, making you and your family
-                feel instantly at home.
+                Choosing Cyprus is more than just relocating your business –
+                it’s about starting a new life built on quality and security.
               </p>
             </div>
           </div>
@@ -210,60 +226,46 @@
 
       <section class="third-row-content-wrapper row-content-wrapper">
         <div class="container">
-          <div class="third-content-row content-row">
-            <div class="third-content content">
+          <div class="third-content-row content-row third-business-content-row">
+            <div class="third-content content third-business-content">
               <h2 class="third-content__title content__title">
-                What it’s like to be an Expat in Cyprus
+                Positive Economic Outlook
               </h2>
               <p class="third-content__description content__description">
-                Cyprus is among Europe’s most popular destinations for tourists
-                from all around the globe. On this little Mediterranean island
-                you will meet people with different cultural backgrounds,
-                speaking a variety of languages. The thousands of people who
-                have moved permanently to Cyprus have been living on the island
-                for many years, creating expat communities in every city. This
-                enhances the sense of feeling at home away from home.
-              </p>
+                The decision to relocate your business comes with the need to discover a location with a strong and promising economic future for your business. Cyprus has established its resilient economic reputation with one of the fastest growth rates in the EU. This is achieved by focusing on the diversification of services and business opportunities found on the island. Some of the most dominant services include communications, real estate, and financial industries. The government’s efforts to support businesses has proved fundamental in the growth of the economy.              </p>
               <ul class="third-list sub-page-list">
                 <li class="third-list__item sub-page-list__item">
-                  Large expat community: Cyprus is becoming more and more
-                  attractive to immigrants from all around the world and is one
-                  of Europe’s largest expat destinations.
+                  Robust GDP growth
                 </li>
                 <li class="third-list__item sub-page-list__item">
-                  English is widely spoken: Greek and Turkish are the official
-                  languages of the island, but English is widely spoken by
-                  almost everyone.
+                  Among the fastest-growing economies in the EU
                 </li>
                 <li class="third-list__item sub-page-list__item">
-                  The low cost of living: While prices vary from city to city,
-                  the cost of living is relatively low and affordable compared
-                  to other cities in Europe.
+                  Positive macroeconomic forecasts
                 </li>
                 <li class="third-list__item sub-page-list__item">
-                  Many employment and work opportunities: Business and economy
-                  thrives on the multicultural environment of the country,
-                  enabling you and your family to easily find the job
-                  opportunity you are looking for.
+                  Key focus on investing in interconnectivity in the following years
+                </li>
+                <li class="third-list__item sub-page-list__item">
+                  Exceptional Regulatory Structure: closely aligned to the English common law legal system
                 </li>
               </ul>
               <p class="third-content__text content__text">
-                Whichever city you may choose to relocate to, you and your
-                family will be able to shape the life you dream about.
+                Since the 1st of January 2022, the Government of Cyprus has launched a new action plan to attract foreign businesses to Cyprus for the purpose of creating or expanding their operations. This creates unlimited possibilities when it comes to growing your business in Cyprus.
               </p>
             </div>
             <div class="third-content__image content__image">
               <img
-                src="./images/sub-offer/family-3-min.jpg"
+                src="./images/sub-offer/business-3-min.jpg"
                 alt="family"
-                class="third-content__img content__img"
+                class="third-content__img content__img business-content__img"
               />
             </div>
           </div>
         </div>
       </section>
 
-      <section class="process family-process">
+      <section class="process business-process">
         <div class="container">
           <h2 class="process__title">How We Can Help</h2>
           <div class="row">
@@ -459,9 +461,9 @@
           <p class="footer__text">
             © 2022 PAM Consulting. All rights reserved
             <span class="footer__line">|</span>
-            Disclaimer
+            <a href="#" class="footer__link">Disclaimer</a>
             <span class="footer__line">|</span>
-            Privacy poilcy
+            <a href="#" class="footer__link">Privacy poilcy</a>
           </p>
         </div>
       </div>
