--- a/family.html
+++ b/family.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Family Relocation|PAM Consulting</title>
+    <link rel="icon" href="./images/logo-min.png">
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/fonts.css" />
     <link
@@ -90,8 +91,8 @@
 
       <section class="first-row-content-wrapper row-content-wrapper">
         <div class="container">
-          <div class="first-content-row content-row">
-            <div class="first-content content">
+          <div class="first-content-row content-row first-family-content-row">
+            <div class="first-content content first-family-content">
               <h2 class="first-content__title content__title">
                 Living the Island Life
               </h2>
@@ -152,7 +153,7 @@
 
       <section class="second-row-content-wrapper row-content-wrapper">
         <div class="container">
-          <div class="second-content-row content-row">
+          <div class="second-content-row content-row second-family-content-row">
             <div class="second-content__image content__image">
               <img
                 src="./images/sub-offer/family-2-min.jpg"
@@ -160,7 +161,7 @@
                 class="second-content__img content__img"
               />
             </div>
-            <div class="second-content content">
+            <div class="second-content content second-family-content">
               <h2 class="second-content__title content__title">
                 Child-Friendly Community
               </h2>
@@ -210,8 +211,8 @@
 
       <section class="third-row-content-wrapper row-content-wrapper">
         <div class="container">
-          <div class="third-content-row content-row">
-            <div class="third-content content">
+          <div class="third-content-row content-row third-family-content-row">
+            <div class="third-content content third-family-content">
               <h2 class="third-content__title content__title">
                 What it’s like to be an Expat in Cyprus
               </h2>
@@ -459,9 +460,9 @@
           <p class="footer__text">
             © 2022 PAM Consulting. All rights reserved
             <span class="footer__line">|</span>
-            Disclaimer
+            <a href="#" class="footer__link">Disclaimer</a>
             <span class="footer__line">|</span>
-            Privacy poilcy
+            <a href="#" class="footer__link">Privacy poilcy</a>
           </p>
         </div>
       </div>
