Investment Page Complete|Texts are the same:)

--- a/family.html
+++ b/family.html
@@ -264,7 +264,7 @@
         </div>
       </section>
 
-      <section class="process family-process">
+      <section class="process family-process sub-page-process">
         <div class="container">
           <h2 class="process__title">How We Can Help</h2>
           <div class="row">
