--- a/investment.html
+++ b/investment.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Business Relocation|PAM Consulting</title>
+    <title>Investment|PAM Consulting</title>
     <link rel="icon" href="./images/logo-min.png">
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/fonts.css" />
@@ -55,7 +55,7 @@
                   >
                 </li>
                 <li class="service-menu__item">
-                  <a href="#" class="service-menu__link">Business relocation</a>
+                  <a href="#" class="service-menu__link">invest relocation</a>
                 </li>
                 <li class="service-menu__item">
                   <a href="#" class="service-menu__link">Family relocation</a>
@@ -80,42 +80,42 @@
       </div>
     </header>
 
-    <main class="main business-main">
-      <section class="business-header sub-header">
-        <div class="overlay business-overlay sub-overlay">
-          <h1 class="business-header__title sub-header__title">
-            Business Relocation
+    <main class="main invest-main">
+      <section class="invest-header sub-header">
+        <div class="overlay invest-overlay sub-overlay">
+          <h1 class="invest-header__title sub-header__title">
+            Investment Opportunities
           </h1>
         </div>
       </section>
 
       <section class="first-row-content-wrapper row-content-wrapper">
         <div class="container">
-          <div class="first-content-row content-row first-business-content-row">
-            <div class="first-content content first-business-content">
+          <div class="first-content-row content-row first-invest-content-row">
+            <div class="first-content content first-invest-content">
               <h2 class="first-content__title content__title">
-                Business-Friendly Environment
+                invest-Friendly Environment
               </h2>
               <p class="first-content__description content__description">
                 Apart from being one of the most attractive holiday destinations
                 globally, Cyprus is also recognized as an ever-growing hub for
-                business in the EU. Every year, entrepreneurs from all around
+                invest in the EU. Every year, entrepreneurs from all around
                 the world are moving to Cyprus with the aim to maximize their
-                business efforts and opportunities. Every big city on the island
+                invest efforts and opportunities. Every big city on the island
                 – Nicosia, Limassol, Paphos, and Larnaca – has something to
                 offer to every ambition-driven individual. This
-                business-friendly environment is the result of effective
-                business initiatives taken by the government which focus on
+                invest-friendly environment is the result of effective
+                invest initiatives taken by the government which focus on
                 providing a variety of benefits to people moving from abroad.
                 <span class="first-content__list-title content__list-title first-content__list-span">
                   Among the multitude of reasons why Cyprus is the ideal place
-                  to relocate your business are the following:
+                  to relocate your invest are the following:
                 </span>
               </p>
               <ul class="first-list sub-page-list">
                 <li class="first-list__item sub-page-list__item">
                   Great Market access: The Geostrategic position of the island
-                  enables businesses to access major markets of the EU
+                  enables investes to access major markets of the EU
                 </li>
                 <li class="first-list__item sub-page-list__item">
                   12.5% corporate tax rate: One of the lowest Corporate tax
@@ -125,7 +125,7 @@
                   Simple Immigration & Employment process
                 </li>
                 <li class="first-list__item sub-page-list__item">
-                  Investment Opportunities: some of the most powerful businesses
+                  Investment Opportunities: some of the most powerful investes
                   include real estate, shipping companies, financial, and
                   insurance industries
                 </li>
@@ -139,16 +139,16 @@
                 </li>
               </ul>
               <p class="first-content__text content__text">
-                These benefits create an attractive and inviting business
-                environment for those seeking to expand their businesses in one
+                These benefits create an attractive and inviting invest
+                environment for those seeking to expand their investes in one
                 of the most dominant corporate locations of the world.
               </p>
             </div>
             <div class="first-content__image content__image">
               <img
-                src="./images/sub-offer/business-1-min.jpg"
-                alt="business"
-                class="first-content__img content__img business-content__img"
+                src="./images/sub-offer/invest-1-min.jpg"
+                alt="invest"
+                class="first-content__img content__img invest-content__img"
               />
             </div>
           </div>
@@ -157,27 +157,27 @@
 
       <section class="second-row-content-wrapper row-content-wrapper">
         <div class="container">
-          <div class="second-content-row content-row second-business-content-row">
+          <div class="second-content-row content-row second-invest-content-row">
             <div class="second-content__image content__image">
               <img
-                src="./images/sub-offer/business-2-min.jpg"
+                src="./images/sub-offer/invest-2-min.jpg"
                 alt="family"
-                class="second-content__img content__img business-content__img"
+                class="second-content__img content__img invest-content__img"
               />
             </div>
-            <div class="second-content content second-business-content">
+            <div class="second-content content second-invest-content">
               <h2 class="second-content__title content__title">
-                Quality of Life in Cyprus
+                Investing in Yachts
               </h2>
               <p class="second-content__description content__description">
                 A minimum of around 4 million tourists choose Cyprus as their
                 holiday destination per year. This makes the island one of the
                 most popular destinations in the world. In fact, many people who
                 experience life in Cyprus tend to return either for another
-                holiday or decide to move permanently. As a business
+                holiday or decide to move permanently. As a invest
                 entrepreneur looking to relocate, the most essential point to
-                carefully consider is the new location of your business
-                activities. This is why apart from the outstanding business
+                carefully consider is the new location of your invest
+                activities. This is why apart from the outstanding invest
                 advantages of Cyprus, you can also find the ideal location for
                 you and your employees to work and live. The cost of living is
                 lower than in most other EU countries High quality of living for
@@ -187,7 +187,7 @@
                 retirement destinations One of the best state pension systems
                 worldwide A strong education sector with a wide range of public
                 and private higher education institutions. Choosing Cyprus is
-                more than just relocating your business – it’s about starting a
+                more than just relocating your invest – it’s about starting a
                 new life built on quality and security.
               </p>
               <ul class="second-list sub-page-list">
@@ -216,7 +216,7 @@
                 </li>
               </ul>
               <p class="second-content__text content__text">
-                Choosing Cyprus is more than just relocating your business –
+                Choosing Cyprus is more than just relocating your invest –
                 it’s about starting a new life built on quality and security.
               </p>
             </div>
@@ -226,13 +226,13 @@
 
       <section class="third-row-content-wrapper row-content-wrapper">
         <div class="container">
-          <div class="third-content-row content-row third-business-content-row">
-            <div class="third-content content third-business-content">
+          <div class="third-content-row content-row third-invest-content-row">
+            <div class="third-content content third-invest-content">
               <h2 class="third-content__title content__title">
-                Positive Economic Outlook
+                Starting a Business
               </h2>
               <p class="third-content__description content__description">
-                The decision to relocate your business comes with the need to discover a location with a strong and promising economic future for your business. Cyprus has established its resilient economic reputation with one of the fastest growth rates in the EU. This is achieved by focusing on the diversification of services and business opportunities found on the island. Some of the most dominant services include communications, real estate, and financial industries. The government’s efforts to support businesses has proved fundamental in the growth of the economy.              </p>
+                The decision to relocate your invest comes with the need to discover a location with a strong and promising economic future for your invest. Cyprus has established its resilient economic reputation with one of the fastest growth rates in the EU. This is achieved by focusing on the diversification of services and invest opportunities found on the island. Some of the most dominant services include communications, real estate, and financial industries. The government’s efforts to support investes has proved fundamental in the growth of the economy.              </p>
               <ul class="third-list sub-page-list">
                 <li class="third-list__item sub-page-list__item">
                   Robust GDP growth
@@ -251,21 +251,21 @@
                 </li>
               </ul>
               <p class="third-content__text content__text">
-                Since the 1st of January 2022, the Government of Cyprus has launched a new action plan to attract foreign businesses to Cyprus for the purpose of creating or expanding their operations. This creates unlimited possibilities when it comes to growing your business in Cyprus.
+                Since the 1st of January 2022, the Government of Cyprus has launched a new action plan to attract foreign investes to Cyprus for the purpose of creating or expanding their operations. This creates unlimited possibilities when it comes to growing your invest in Cyprus.
               </p>
             </div>
             <div class="third-content__image content__image">
               <img
-                src="./images/sub-offer/business-3-min.jpg"
+                src="./images/sub-offer/invest-3-min.jpg"
                 alt="family"
-                class="third-content__img content__img business-content__img"
+                class="third-content__img content__img invest-content__img"
               />
             </div>
           </div>
         </div>
       </section>
 
-      <section class="process business-process sub-page-process">
+      <section class="process invest-process sub-page-process">
         <div class="container">
           <h2 class="process__title">How We Can Help</h2>
           <div class="row">
@@ -273,14 +273,13 @@
               <div class="process-item">
                 <div class="process-item__image bg-pure-purple">
                   <img
-                    src="./images/png/arrival.png"
+                    src="./images/png/listener 1-min.png"
                     class="process-item__png"
                   />
                 </div>
-                <h4 class="process-item__title">Pre-arrival Planning</h4>
+                <h4 class="process-item__title">We listen</h4>
                 <p class="process-item__caption">
-                  We provide a step-by-step plan that will handle every aspect
-                  of your family’s relocation process.
+                  You come to us with your goals, and we make sure to understand your needs to the fullest.
                 </p>
               </div>
             </div>
